--- a/bitmaker/seatyourself/app/views/welcome/index.html.erb
+++ b/bitmaker/seatyourself/app/views/welcome/index.html.erb
@@ -1,2 +1,12 @@
-<h1>Seatyourself App</h1>
-<%= link_to "List of Restaurants", controller: "restaurants" %>
+<h1>SeatYourself</h1>
+
+<%= form_tag restaurants_path, :method => 'get' do %>
+	<p>
+		<%= label_tag "By Restaurant Name:" %>
+		<%= text_field_tag :search %>
+		<%= submit_tag "Find a Seat" %>
+	</p>
+<% end %>
+
+<p><%= link_to "List of Restaurants", controller: "restaurants" %></p>
+<p><%= link_to "List of Users", controller: "users" %></p>
